feat: pin checkout action to commit SHA

--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -4,11 +4,12 @@ on: [push]
 
 jobs:
     build:
+      # ensure that the self-hosted runner uses Linux
         runs-on: [self-hosted, Linux]
 
         steps:
             - name: Checkout code
-              uses: actions/checkout@v4
+              uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b # v4.1.4
 
             - name: Echo runner name
               run: "echo 'Hello from runner: ${{ runner.name }}!'"
